--- a/index.html
+++ b/index.html
@@ -33,5 +33,6 @@
     <h2>Decode Message</h2>
     <input type="text" placeholder="Decode your message"./>
     <h3 class="decodedmessage"></h3>
+    <script src="assets/ciphers.js"
   </body>
 </html>
