--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
     not, but it'll take who's trying to manually decode it take FOREVER!
     </h3>
     <h2>Encode Message</h2>
-    <input type="text" placeholder="Encode your message."/>
-    <h3 class="message"></h3>
+    <input id="encode" type="text" placeholder="Encode your message."/>
+    <h3 id="encodedmessage"></h3>
     <h2>Decode Message</h2>
-    <input type="text" placeholder="Decode your message"./>
+    <input id="decode" type="text" placeholder="Decode your message"./>
     <h3 class="decodedmessage"></h3>
     <script src="assets/ciphers.js"
   </body>
