--- a/index.html
+++ b/index.html
@@ -20,6 +20,11 @@
         border: none;
         border-radius: 10px;
       }
+      button {
+        border: none;
+        border-radius: 10px;
+        background-color: green;
+      }
     </style>
   </head>
   <body>
