--- a/index.html
+++ b/index.html
@@ -34,9 +34,11 @@
     </h3>
     <h2>Encode Message</h2>
     <input id="encode" type="text" placeholder="Encode your message."/>
+    <button id="encodemessage">Encode Message</button>
     <h3 id="encodedmessage"></h3>
     <h2>Decode Message</h2>
     <input id="decode" type="text" placeholder="Decode your message"./>
+    <button id="decodemessage">Decode Message</button>
     <h3 class="decodedmessage"></h3>
     <script src="assets/ciphers.js"
   </body>
