--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
     <input id="decode" type="text" placeholder="Decode your message"./>
     <button id="decodemessage">Decode Message</button>
     <h3 class="decodedmessage"></h3>
-    <script src="assets/ciphers.js"
+    <script src="assets/encode.js"></script>
+    <script src="assets/decode.js"></script> <!-- error on my end with not putting the end brackets durr -->
   </body>
 </html>
