--- a/index.html
+++ b/index.html
@@ -40,7 +40,77 @@
     <input id="decode" type="text" placeholder="Decode your message"./>
     <button id="decodemessage">Decode Message</button>
     <h3 class="decodedmessage"></h3>
-    <script src="assets/encode.js"></script>
-    <script src="assets/decode.js"></script> <!-- error on my end with not putting the end brackets durr -->
+    <script>
+      function first(str, shift = 3) {
+    return str.replace(/[a-zA-Z]/g, (char) => {
+        const base = char >= 'a' ? 97 : 65;
+        return String.fromCharCode(((char.charCodeAt(0) - base - shift + 26) % 26) + base);
+    });
+}
+
+function second(str, shift = 5) {
+    return str
+        .split("")
+        .map((char) => String.fromCharCode(char.charCodeAt(0) - shift))
+        .join("");
+}
+
+function third(str) {
+    return btoa(str);
+}
+
+function fourth(str) {
+    return str
+        .split(" ")
+        .map((bin) => String.fromCharCode(parseInt(bin, 2)))
+        .join("");
+}
+
+function decodeText() {
+    const inputText = document.getElementById("decode").value;
+    let result = fourth(inputText);
+    result = third(result);
+    result = second(result);r
+    result = first(result);
+    document.querySelector(".decodedmessage").textContent = result;
+}
+document.addEventListener("DOMContentLoaded", () => {
+    document.getElementById("decodemessage").addEventListener("click", decodeText);
+  // decode END
+  // wanna know what we use to encode the text? find out yourself, thats why it takes forever.
+function first(str, shift = 3) {
+    return str.replace(/[a-zA-Z]/g, (char) => {
+        const base = char >= 'a' ? 97 : 65;
+        return String.fromCharCode(((char.charCodeAt(0) - base + shift) % 26) + base);
+    });
+}
+function second(str, shift = 5) {
+    return str
+        .split("")
+        .map((char) => String.fromCharCode(char.charCodeAt(0) + shift))
+        .join("");
+}
+function third(str) {
+    return btoa(str);
+}
+function fourth(str) {
+    return str
+        .split("")
+        .map((char) => char.charCodeAt(0).toString(2).padStart(8, "0"))
+        .join(" ");
+}
+function encode() {
+    const inputText = document.getElementById("encode").value;
+    let result = first(inputText);
+    result = second(result);
+    result = third(result);
+    result = fourth(result);
+    document.querySelector(".encodedmessage").textContent = result;
+}
+// encode when you click the button, text field enter didnt work
+document.addEventListener("DOMContentLoaded", () => {
+    document.getElementById("encodemessage").addEventListener("click", encode);
+  // encode END
+    </script>
   </body>
 </html>
