--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@ function second(str, shift = 5) {
 function third(str) {
     return btoa(str);
 }
-
+// why the hell is this not deploying??
 function fourth(str) {
     return str
         .split(" ")
