snake can u figure this out??

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
         }
 
         try {
-          // i really hope this fixes it
+          // i really hope this fixes it // this aint fixing it
           let result = bid(inputText);
           result = bd(result);
           result = ad(result);
