--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
     <input id="decode" type="text" placeholder="Decode your message." />
     <button onclick="decodeText()">Decode Message</button>
     <h3 id="decodedmessage"></h3>
+    <h4>You can also <a href="index.html" download>download this locally</a> so you don't have to depend on this website.</h4>
     <script>
       function cce(str, shift = 3) {
         return str.replace(/[a-zA-Z]/g, (char) => {
