--- a/index.html
+++ b/index.html
@@ -12,6 +12,54 @@
         color: green;
         font-family: monospace;
       }
+      <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Dynamic Text Display</title>
+    <style>
+        body {
+            font-family: 'Courier New', monospace;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            background-color: #222;
+            color: #0f0;
+            margin: 0;
+        }
+
+        #text {
+            font-size: 48px;
+            white-space: nowrap;
+        }
+    </style>
+</head>
+<body>
+
+<div id="text">Hello, World!</div>
+
+<script>
+    const textElement = document.getElementById("text");
+    const originalText = textElement.textContent;
+    const changeInterval = 50; // Time interval in milliseconds
+    const characters = "ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789!@#$%^&*()_+";
+
+    function changeCharacters() {
+        let currentText = textElement.textContent;
+
+        // Randomly replace characters in the current text
+        let newText = "";
+        for (let i = 0; i < currentText.length; i++) {
+            if (Math.random() > 0.8) {
+                newText += characters[Math.floor(Math.random() * characters.length)];
+            } else {
+                newText += currentText[i];
+            }
+        }
+
+        textElement.textContent = newText;
+    }
+
+    setInterval(changeCharacters, changeInterval);
       input {
         background-color: #555;
         padding: 10px;
