--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
   <style>
+    body {
+      background-color: #222;
+      color: green;
+      font-family: monospace;
+    }
       input {
         background-color: #555;
         padding: 10px;
