--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     }
   </style>
   <body>
-    <h1 class="title">SnakeCipher</h1>
+    <h1 id="title" class="title">SnakeCipher</h1>
     <h3>
       Your website for making super-encoded secret messages that are only able to
       be decoded through this website. Maybe not, but it'll take whoever's trying
