--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
   </style>
   <body>
     <h1 id="title" class="title">SnakeCipher</h1>
+   <h2 id="ciphertext">THISWILLBEIMPOSSIBLETOREAD</h2>
     <h3>
       Your website for making super-encoded secret messages that are only able to
       be decoded through this website. Maybe not, but it'll take whoever's trying
@@ -57,7 +58,7 @@
     <input id="decode" type="text" placeholder="Decode your message." />
     <button onclick="decodeText()">Decode Message</button>
     <h3 id="decodedmessage"></h3>
-    <h4>You can also <a href="index.html" download>download this locally</a> so you don't have to depend on this website.</h4>
+    <h4>You can also <a href="index.html" download>download this locally</a> so you don't have to depend on this website.</h4
 
     <script>
       function cce(str, shift = 3) {
@@ -113,6 +114,28 @@
         result = bie(result);
         document.getElementById("encodedmessage").textContent = result;
       }
+      function encodeciphers() {
+    const inputText = document.getElementById("ciphertext").innerText;
+    if (!inputText) {
+        return;
+    }
+    let result = cce(inputText);
+    result = ae(result);
+    result = be(result);
+    result = bie(result);
+    document.getElementById("ciphertext").textContent = result;
+}
+
+// Start scrambling when the page loads
+window.onload = function() {
+    const intervalId = setInterval(encodeciphers, 100); // Scramble every 100 ms
+
+    // Stop scrambling after 5 seconds
+    setTimeout(function() {
+        clearInterval(intervalId);
+    }, 5000); // 5000 ms = 5 seconds
+};
+
 
       function decodeText() {
         const inputText = document.getElementById("decode").value;
